--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    background: url(/bg.jpg);
+    background: url(bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
