fixed Input Bug :|

--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ header h1{
 }
 
 .fDiv form label{
-    padding: 100px;
-    margin-bottom: 20px;
+    /* padding: 100px; */
+    /* margin-bottom: 20px; */
 }
 
 .fDiv form button{
